# reachy-mini-live-split

./: .gitignore  .mise.toml  CLAUDE.md  README.md  TESTING.md  pyproject.toml
config/: app.example.toml  motions.example.toml
docs/: 01_product_requirements.md  02_architecture.md  03_state_machine.md  04_motion_spec.md  05_project_layout.md  06_implementation_plan.md  07_test_plan.md  08_operations.md  09_references.md
src/app/: __main__.py  app.py  cli.py  clock.py  config.py  logging_setup.py  main.py  types.py
src/app/domain/: event_detector.py  events.py  state_machine.py  thresholds.py
src/app/livesplit/: commands.py  parser.py  poller.py  snapshot.py
src/app/motions/: ambient.py  catalog.py  cooldown.py  planner.py
src/app/reachy/: dry_executor.py  executor.py  real_executor.py
src/app/telemetry/: event_log.py  session_log.py
src/app/transports/: base.py  tcp_client.py  ws_client.py
src/app/tts/: audio_store.py  game_context.py  service.py
src/app/web/: bus.py  console.html  server.py
tests/: test_ambient.py  test_event_detector.py  test_motion_planner.py  test_state_machine.py  test_thresholds.py
