[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reachy-livesplit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "websocket-client>=1.9.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "openai>=1.0",
]

# reachy_mini は PyPI 経由ではなく Reachy Mini 公式の手順でインストールする。
# 実機使用時は別途 `uv pip install reachy_mini` または SDK の指示に従うこと。
# [project.optional-dependencies]
# reachy = ["reachy_mini"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
